--- a/src/Register/register.css
+++ b/src/Register/register.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
 }
-form {
+.form {
     width: 20%;
     display: flex;
     flex-direction: column;
